Decorate method table entries to support pointer profiling. https://bugs.webkit.org/show_bug.cgi?id=184430 <rdar://problem/39296190>

Reviewed by Saam Barati.

Source/JavaScriptCore:

* runtime/ClassInfo.h:

Source/WTF:

* wtf/PointerPreparations.h:



Canonical link: https://commits.webkit.org/199984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230455 268f45cc-cd09-0410-ab3c-d52691b4dbfc